# bq

./: .dockerignore  Dockerfile.test  README.md  THREAD_EXECUTOR_IMPROVEMENTS.md  coverage-report.txt  docker-compose.yaml  pyproject.toml  test_custom_fields_summary.md  test_custom_models.py  test_real_data.py
.github/workflows/: soak.yml  test.yml
.workstream-plans/: 2026-07-03-2aa24c3c0f-bq-multithreading-hardening-test-suite.md
bq/: app.py  config.py
bq/services/: dispatch.py
scripts/: run-tests.sh  soak.py
tests/: conftest.py
tests/acceptance/: helpers.py  invariants.py  test_batch_and_wait_issue.py  test_cli.py  test_crash_recovery.py  test_custom_models.py  test_process_cmd.py  test_realistic_integration.py  test_thread_executor.py  test_thread_executor_edge_cases.py  test_torture.py  test_worker_lifecycle.py  test_worker_threaded.py
tests/acceptance/fixtures/: custom_models.py  thread_processors.py
tests/unit/: test_engine_config.py  test_healthcheck.py  test_thread_executor.py  test_thread_executor_advanced.py
tests/unit/services/: test_dispatch_interleaving.py  test_dispatch_service.py
